# muxrs

./: Cargo.toml  LICENSE  README.md  muxrs.json  muxrs.json.example  rustfmt.toml
src/: config.rs  main.rs  tmux.rs
src/config/: postprocess.rs  schema.rs  utils.rs
src/tmux/: command.rs  query.rs
