[package]
name = "muxrs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "muxrs"
path = "src/main.rs"

[dependencies]
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
clap = { version = "4.5.49", features = ["derive"] }
config = "0.15.18"
git2 = "0.20.2"
regex = "1.12.2"
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
